--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   height: 250px;
 }
 
-@media only screen and (maxwidth: 900px) {
+@media only screen and (max-width: 900px) {
   .container {
     grid-template-columns: repeat(2, 1fr)
   }
