--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@
 
 @media only screen and (max-width: 900px) {
   .container {
-    grid-template-columns: repeat(2, 1fr)
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media only screen and (max-width: 600px;) {
+@media only screen and (max-width: 600px) {
   .container {
-    grid-template-columns: repeat(1, 1fr)
+    grid-template-columns: repeat(1, 1fr);
   }
 }
